# cmake-quickstart

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENCE.md  README.md  vcpkg.json
.github/workflows/: cmake-build.yml  cmake.yml
apps/: cli.cpp
include/libName/: libName.hpp  version.hpp
src/: libName.cpp  main.cpp
tests/: test.cpp
